# musync

./: .cache  .env.example  .gitignore  .pre-commit-config.yaml  README.md  hello.py  main.py  pyproject.toml
musync/: main.py  sync.py
musync/models/: __init__.py  playlist.py  song.py
musync/providers/: __init__.py  base.py  spotify.py  youtube.py
tests/providers/: test_spotify.py  test_youtube.py
