[project]
name = "musync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "spotipy>=2.24.0",
    "typer>=0.13.1",
    "ytmusicapi>=1.8.2",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
]
